packages/preview/sprintf/0.1.0/.nim_runtime/tests/errmsgs/t23355.nim
discard """
  errormsg: "{.pop.} without a corresponding {.push.}"
"""

block:
  {.push raises: [].}

proc f() =
  {.pop.}

proc g() = raise newException(ValueError, "")